--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -216,7 +216,9 @@ papertitle {
 
       .image.avatar img {
         border-radius: 100%;
-        width: 45%;
+        // width: 45%;
+        width: 200px;
+        height: 200px;
         padding: 20px;
         // border: 1px solid #ddd;
         // padding: 3px;
@@ -501,7 +503,7 @@ footer {
    .image.avatar img {
         border-radius: 100%;
         width: 117px;
-        padding:0px;
+        padding: 20px;
       }
   #head1o2 {
     visibility: hidden;
