--- a/html_source_file/assets/css/style-no-dark-mode.css
+++ b/html_source_file/assets/css/style-no-dark-mode.css
@@ -58,7 +58,8 @@ papertitle { font-weight: 600; font-size: 100%; }
 
 .image.avatar:before { display: none; }
 
-.image.avatar img { border-radius: 100%; width: 60%; padding: 20px; }
+/* .image.avatar img { border-radius: 100%; width: 45%; padding: 20px; } */
+.image.avatar img { border-radius: 100%; width: 60%; padding: 0px; }
 
 #header .image.avatar { margin: 0 0 1em 0; width: 8.00em; }
 
