--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -16,7 +16,7 @@ body {
   font-size: 19px;
   line-height: 1.5;
   font-family: "Crimson Pro", serif;
-  color: #595959;
+  color: #1b1b1b;
   font-weight: 400;
   margin: 0;
 }
