--- a/assets/css/font_sans_serif.css
+++ b/assets/css/font_sans_serif.css
@@ -9,9 +9,9 @@
   body {
   background-color: #fff;
   padding: 50px;
-  font-size: 20px;
-  line-height: 1.6;
+  font-size: 19px;
+  line-height: 1.5;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #595959;
+  color: #1b1b1b;
   font-weight: 400;
 }
