--- a/assets/css/font_sans_serif.css
+++ b/assets/css/font_sans_serif.css
@@ -12,6 +12,6 @@
   font-size: 19px;
   line-height: 1.5;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #1b1b1b;
+  color: #3d3c3c;
   font-weight: 400;
 }
