--- a/html_source_file/assets/css/style-no-dark-mode.css
+++ b/html_source_file/assets/css/style-no-dark-mode.css
@@ -62,7 +62,7 @@ papertitle { font-weight: 600; font-size: 100%; }
 .image.avatar img { border-radius: 100%; width: 60%; padding: 0; }
 
 /* #header .image.avatar { margin: 0 0 1em 0; width: 8.00em; } */
-#header .image.avatar { margin: 0 0 1em 0; width: 12.00em; }
+#header .image.avatar { margin: 0 0 1em 0; width: 15.00em; }
 
 h3, h4, h5, h6 { font-weight: 600; color: #043361; margin: 0 0 20px; }
 
@@ -139,7 +139,7 @@ footer { width: 232px; float: left; position: fixed; bottom: 30px; -webkit-font-
   section { border: 1px solid #e5e5e5; border-width: 1px 0; padding: 20px 0; margin: 0 0 20px; }
   header a small { display: inline; }
   header ul { position: absolute; right: 50px; top: 52px; }
-  .image.avatar img { border-radius: 100%; width: 117px; padding: 20px; }
+  .image.avatar img { border-radius: 100%; width: 117px; padding: 0; }
   #head1o2 { visibility: hidden; }
   #head2o2 { visibility: hidden; } }
 @media print, screen and (max-width: 960px) { body { word-wrap: break-word; padding: 15px; }
@@ -150,7 +150,7 @@ footer { width: 232px; float: left; position: fixed; bottom: 30px; -webkit-font-
   body { padding: 15px; }
   header ul { width: 99%; }
   header li, header ul li + li + li { width: 33%; }
-  .image.avatar img { border-radius: 100%; width: 95px; padding: 20px; }
+  .image.avatar img { border-radius: 100%; width: 95px; padding: 0; }
   #head1o2 { visibility: hidden; }
   #head2o2 { visibility: hidden; } }
 @media print { body { padding: 0.4in; font-size: 12pt; color: #444; } }
