--- a/html_source_file/assets/css/style-no-dark-mode.css
+++ b/html_source_file/assets/css/style-no-dark-mode.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,500;0,600;1,500;1,600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
-body { background-color: #fff; padding: 0px; font: 16.0px/1.5 Crimson Pro, serif; color: #595959; font-weight: 400; margin: 0; }
+/* body { background-color: #fff; padding: 0px; font: 16.0px/1.5 Crimson Pro, serif; color: #595959; font-weight: 400; margin: 0; } */
+body { background-color: #fff; padding: 0px; font: 16.0px/1.5 Crimson Pro, serif; color: #3d3c3c; font-weight: 400; margin: 0; }
 
 .pub-row { display: flex; align-items: center; }
 
@@ -26,7 +27,7 @@ body { background-color: #fff; padding: 0px; font: 16.0px/1.5 Crimson Pro, serif
 
 .github span { background-color: #000; }
 
-email { font-size: 14px; font-family: "Ubuntu Mono"; }
+email { font-size: 16px; font-family: "Ubuntu Mono"; }
 
 .icon-button i { background: none; color: white; height: 3.6rem; left: 0; line-height: 3.6rem; position: absolute; top: 0; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; width: 3.6rem; z-index: 10; }
 
@@ -40,7 +41,8 @@ email { font-size: 14px; font-family: "Ubuntu Mono"; }
 
 .icon-button:hover .icon-twitter, .icon-button:hover .icon-facebook, .icon-button:hover .icon-github, .icon-button:hover .icon-linkedin { color: white; }
 
-autocolor { color: #595959; }
+/* autocolor { color: #595959; } */
+autocolor { color: #3d3c3c; }
 
 lightonly { visibility: visible; }
 
@@ -118,7 +120,8 @@ header ul a:hover { color: #999; }
 
 header ul a:active { background-color: #f0f0f0; }
 
-strong { color: #222; font-weight: 500; }
+/* strong { color: #222; font-weight: 600; } */
+strong { color: #101010; font-weight: 700; }
 
 header ul li + li + li { border-right: none; width: 89px; }
 
