--- a/html_source_file/assets/css/style-no-dark-mode.css
+++ b/html_source_file/assets/css/style-no-dark-mode.css
@@ -61,10 +61,10 @@ papertitle { font-weight: 600; font-size: 100%; }
 .image.avatar:before { display: none; }
 
 /* .image.avatar img { border-radius: 100%; width: 45%; padding: 20px; } */
-.image.avatar img { border-radius: 100%; width: 80%; padding: 0; }
+.image.avatar img { border-radius: 100%; width: 300px !important; padding: 0 !important; }
 
 /* #header .image.avatar { margin: 0 0 1em 0; width: 8.00em; } */
-#header .image.avatar { margin: 0 0 1em 0; width: 20.00em; }
+#header .image.avatar { margin: 0 0 1em 0; width: 300px !important; }
 
 h3, h4, h5, h6 { font-weight: 600; color: #043361; margin: 0 0 20px; }
 
