--- a/html_source_file/assets/css/style-no-dark-mode.css
+++ b/html_source_file/assets/css/style-no-dark-mode.css
@@ -56,15 +56,15 @@ papertitle { font-weight: 600; font-size: 100%; }
 
 .image:before { -moz-transition: opacity 0.2s ease-in-out; -webkit-transition: opacity 0.2s ease-in-out; -ms-transition: opacity 0.2s ease-in-out; transition: opacity 0.2s ease-in-out; border-radius: 0.35em; content: ''; display: block; height: 100%; left: 0; opacity: 0.5; position: absolute; top: 0; width: 100%; }
 
-.image.avatar { border-radius: 100%; }
+.image.avatar { border-radius: 0%; }
 
 .image.avatar:before { display: none; }
 
 /* .image.avatar img { border-radius: 100%; width: 45%; padding: 20px; } */
-.image.avatar img { border-radius: 100%; width: 300px !important; padding: 0 !important; }
+.image.avatar img { border-radius: 0%; width: 80%; padding: 0; }
 
 /* #header .image.avatar { margin: 0 0 1em 0; width: 8.00em; } */
-#header .image.avatar { margin: 0 0 1em 0; width: 300px !important; }
+#header .image.avatar { margin: 0 0 1em 0; width: 20.00em; }
 
 h3, h4, h5, h6 { font-weight: 600; color: #043361; margin: 0 0 20px; }
 
