--- a/html_source_file/assets/css/style-no-dark-mode.css
+++ b/html_source_file/assets/css/style-no-dark-mode.css
@@ -56,12 +56,23 @@ papertitle { font-weight: 600; font-size: 100%; }
 
 .image:before { -moz-transition: opacity 0.2s ease-in-out; -webkit-transition: opacity 0.2s ease-in-out; -ms-transition: opacity 0.2s ease-in-out; transition: opacity 0.2s ease-in-out; border-radius: 0.35em; content: ''; display: block; height: 100%; left: 0; opacity: 0.5; position: absolute; top: 0; width: 100%; }
 
-.image.avatar { border-radius: 0%; }
+/* .image.avatar { border-radius: 0%; } */
+.image.avatar {
+  width: 300px;         /* Make the container bigger */
+  height: 200px;        /* Give it a rectangular shape */
+}
 
 .image.avatar:before { display: none; }
 
 /* .image.avatar img { border-radius: 100%; width: 45%; padding: 20px; } */
-.image.avatar img { border-radius: 0%; width: 80%; padding: 0; }
+/* .image.avatar img { border-radius: 0%; width: 80%; padding: 0; } */
+.image.avatar img {
+  width: 100%;          /* Fill the container */
+  height: 100%;         /* Fill height too */
+  object-fit: cover;    /* Crop image nicely if aspect ratio differs */
+  border-radius: 0;     /* Keep it rectangular */
+  padding: 0;
+}
 
 /* #header .image.avatar { margin: 0 0 1em 0; width: 8.00em; } */
 #header .image.avatar { margin: 0 0 1em 0; width: 20.00em; }
@@ -143,7 +154,8 @@ footer { width: 232px; float: left; position: fixed; bottom: 30px; -webkit-font-
   section { border: 1px solid #e5e5e5; border-width: 1px 0; padding: 20px 0; margin: 0 0 20px; }
   header a small { display: inline; }
   header ul { position: absolute; right: 50px; top: 52px; }
-  .image.avatar img { border-radius: 0%; width: 117px; padding: 0; }
+  /* .image.avatar img { border-radius: 0%; width: 117px; padding: 0; } */
+  .image.avatar img { width: 300px; height: 200px; }
   #head1o2 { visibility: hidden; }
   #head2o2 { visibility: hidden; } }
 @media print, screen and (max-width: 960px) { body { word-wrap: break-word; padding: 15px; }
@@ -154,7 +166,8 @@ footer { width: 232px; float: left; position: fixed; bottom: 30px; -webkit-font-
   body { padding: 15px; }
   header ul { width: 99%; }
   header li, header ul li + li + li { width: 33%; }
-  .image.avatar img { border-radius: 0%; width: 95px; padding: 0; }
+  /* .image.avatar img { border-radius: 0%; width: 95px; padding: 0; } */
+  .image.avatar img { width: 250px; height: 166px; }
   #head1o2 { visibility: hidden; }
   #head2o2 { visibility: hidden; } }
 @media print { body { padding: 0.4in; font-size: 12pt; color: #444; } }
