--- a/_sass/minimal-light-no-dark-mode.scss
+++ b/_sass/minimal-light-no-dark-mode.scss
@@ -3,16 +3,18 @@
   align-items: center;}
 
 .social-icons a{
-  display:inline-block;
-  height:2.4rem;
-  width:2.4rem;
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  height:3rem;
+  width:3rem;
   background-color:transparent;
   color:#043361!important;
   border-radius:100%;
-  text-align:center;
-  font-size:1.15rem;
-  line-height:2.5rem;
-  margin-right:1rem}
+  font-size:1.6rem;
+  line-height:1;
+  margin-right:1.1rem;
+  transition:transform 0.2s ease-in-out}
 
 .social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:white;
     color:black;
@@ -85,6 +87,13 @@ email {
     // font-size: 14px;
     font-size: 16px;
     font-family: "Ubuntu Mono";
+}
+
+position{
+  display:block;
+  font-size:1.15rem;
+  font-weight:500;
+  margin-top:0.4rem;
 }
 
 .icon-button i{
