--- a/_sass/minimal-light-no-dark-mode.scss
+++ b/_sass/minimal-light-no-dark-mode.scss
@@ -2,23 +2,34 @@
   display: flex; 
   align-items: center;}
 
+.social-icons{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  gap:0.4rem;
+}
+
 .social-icons a{
   display:inline-flex;
   align-items:center;
   justify-content:center;
-  height:3rem;
-  width:3rem;
+  height:2.5rem;
+  width:2.5rem;
   background-color:transparent;
   color:#043361!important;
   border-radius:100%;
-  font-size:1.6rem;
+  font-size:1.8rem;
   line-height:1;
-  margin-right:1.1rem;
+  margin:0;
   transition:transform 0.2s ease-in-out}
 
-.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:white;
+.social-icons a:hover{background-color:white;
     color:black;
-    transform: scale(1.2)}
+    transform: scale(1.15)}
+
+.social-icons i{
+  font-size:1.7rem;
+}
     /*
     .social-icons a:after {
         content: '';
