--- a/_sass/minimal-light-no-dark-mode.scss
+++ b/_sass/minimal-light-no-dark-mode.scss
@@ -193,7 +193,7 @@ papertitle {
       }
 
       .image.avatar img {
-        border-radius: 0;
+        border-radius: 100%;
         width: 100%;
         height: 100%;
         padding: 0;
@@ -455,7 +455,7 @@ footer {
   }
 
    .image.avatar img {
-        border-radius: 0;
+        border-radius: 100%;
         width: 100%;
         height: 100%;
         padding:0;
@@ -517,7 +517,7 @@ footer {
   }
 
   .image.avatar img {
-      border-radius: 0;
+      border-radius: 100%;
       width: 100%;
       height: 100%;
       padding:0;
