--- a/_sass/minimal-light-no-dark-mode.scss
+++ b/_sass/minimal-light-no-dark-mode.scss
@@ -182,9 +182,9 @@ papertitle {
     }
 
     .image.avatar {
-      border-radius: 0;
+      border-radius: 100%;
       width: 14rem;
-      aspect-ratio: 4 / 5;
+      aspect-ratio: 1 / 1;
       overflow: hidden;
     }
 
